Some content in login Screen

--- a/templates/screens/login_screen.handlebars
+++ b/templates/screens/login_screen.handlebars
@@ -1,6 +1,3 @@
-hoal 
-
-
-hola
-
-luli
+{{view Yn.SocialBigButtonView class="facebook is-middle" 
+  contentI18n="login_facebook" 
+  action="loginWithFb" }}
