Add footer for android

--- a/less/views/screens/login.less
+++ b/less/views/screens/login.less
@@ -1,3 +1,29 @@
 #login-screen {
 
+	> .row.one {
+
+		height: 20%;
+
+	}
+
+	> .row.two {
+
+		height: 30%;
+
+    > .brand-container {
+
+      height: 112px;
+      width: 242px;
+      margin: 0 auto;
+
+    }
+
+	}
+
+	> .row.three {
+
+		height: 20%;
+
+	}
+
 }
