--- a/templates/screens/login_screen.handlebars
+++ b/templates/screens/login_screen.handlebars
@@ -1,3 +1,13 @@
+<div class="row one"></div>
+
+<div class="row two">
+  <div class="brand-container"></div>
+</div>
+
+<div class="row three"></div>
+
+
 {{view Yn.SocialBigButtonView class="facebook is-middle" 
   contentI18n="login_facebook" 
   action="loginWithFb" }}
+
