--- a/less/views/api/aside.less
+++ b/less/views/api/aside.less
@@ -1,7 +1,9 @@
 @import 'animations';
 @import 'appanimations';
+@import 'appsizes';
 
 
+// TODO: define media query for different min-width
 .aside-container {
 
   > .aside-front {
@@ -10,3 +12,44 @@
 
 }
 
+
+.aside-container {
+
+  > .aside-left, > .aside-right {
+    width: @aside-size;
+  }
+
+  > .aside-right {
+    left: @aside-size;
+  }
+
+}
+
+.aside-container.is-aside-big {
+
+  > .aside-left, > .aside-right {
+    width: @aside-size-big;
+  }
+
+  > .aside-right {
+    left: @aside-size-big;
+  }
+
+}
+
+
+.aside-container.is-aside-right > .aside-front {
+  -webkit-transform:translate3d(@aside-size*-1,0,0);
+}
+
+.aside-container.is-aside-left > .aside-front {
+  -webkit-transform:translate3d(@aside-size,0,0);
+}
+
+.aside-container.is-aside-big.is-aside-right > .aside-front {
+  -webkit-transform:translate3d(@aside-size-big*-1,0,0);
+}
+
+.aside-container.is-aside-big.is-aside-left > .aside-front {
+  -webkit-transform:translate3d(@aside-size-big,0,0);
+}
